# udmabufxx

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  udmabuf.cpp  udmabuf.h  udmabufxx.pc.in
src/: CMakeLists.txt  Config.cmake.in  UdmabufxxConfig.cmake.in  udmabuf.cpp  udmabuf.h
tests/: CMakeLists.txt  common.h  main-test.cpp  smoke.cpp
